problemas con emails y telefonos de contactos

--- a/raiz.html/music.html
+++ b/raiz.html/music.html
@@ -29,23 +29,38 @@
            </div>
        </nav>
         <h1 class="h1">MUSIC//</h1>
-        <h2>Direct Links</h2>
-        <ul>
+        <h2 class="first">Direct Links</h2>
+        <ul class="links">
             <li><a href="#album">Album</a></li>
             <li><a href="#organic">Videos: Organic Love</a></li>
-            <li><a href="">Video: Street Light</a></li>
+            <li><a href="#street">Video: Street Light</a></li>
         </ul>
+        <article id="album"></article>
         <h2>ALBUM TWIST IN REALITY</h2>
         <img src="../img/emilia-play-list.png" alt=>
-        <p>Organic Love | 02:40 <br>
-            Twist In My Reality | 02:10 <br>
-            Street Light | 03:28 <br>
-            Love Don’t Live Here Anymore (Cover) | 03:49</p>
+        <ul class="reproductor">
+            <li>Organic Love | 02:40</li>
+            <li>Twist In My Reality | 02:10</li>
+            <li>Street Light | 03:28</li>
+            <li>Love Don’t Live Here Anymore (Cover) | 03:49</li>
+        </ul>
         <a href="#top">Go Top</a>
         <h2>VIDEO ORGANIC LOVE</h2>
         <article id="organic"></article>
-        <iframe src="https://vimeo.com/134861419"></iframe>
-
+        <iframe src="https://player.vimeo.com/video/135166028" width="900" height="500" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> <br>
+        <p>Organic Love | 02:40 <br>
+        Twist In My Reality | 02:10 <br>
+        Street Light | 03:28 <br>
+        Love Don’t Live Here Anymore (Cover) | 03:49</p>
+        <a href="#top">Go Top</a>
+        <h2>VIDEO STREET LIGHT</h2>
+        <article id="street"></article>
+        <iframe src="https://player.vimeo.com/video/134861419" width="900" height="500" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> <br>
+        <p>Directed by VINCE MALC & EMILIA COLE <br>
+        Edited and Filmed by NICOLAS TROY <br>
+        Produced by NIKI HEART, <br>
+        Wix Films LTD.</p>
+        <a href="#top">Go Top</a>
 
     </body>
 </html>
