--- a/raiz.html/contact.html
+++ b/raiz.html/contact.html
@@ -32,15 +32,15 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondres%2C%20Reino%20Unido!5e0!3m2!1ses-419!2sar!4v1588087103989!5m2!1ses-419!2sar" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         <h2 class="h2">CONTACT INFO</h2>
         <h3>CONTACT INFO - MANAGEMENT | Karen Blanche</h3>
-        email: info@mysite.com <br>
-        phone: 123-456-7890 <br>
+        email: <a href="mailto:info@mysite.com">info@mysite.com</a> <br>
+        phone: <a href="123-456-7890">123-456-7890</a> <br>
         <h3>BOOKING | Daniel Ku </h3>
-        email: info@mysite.com <br>
-        phone: 123-456-7890 <br>
+        email:<a href="mailto:info@mysite.com"> info@mysite.com</a> <br>
+        phone: <a href="123-456-7890">123-456-7890</a> <br>
         <h3>LABEL | Wix Records, Jake Coldham </h3>
-        email: info@mysite.com <br>
-        phone: 123-456-7890 <br>
+        email: <a href="mailto:info@mysite.com">info@mysite.com</a> <br>
+        phone: <a href="123-456-7890">123-456-7890</a> <br>
         <h3>PR | That Girl Pr, Sarah Brookstone </h3>
-        email: info@mysite.com <br>
-        phone: 123-456-7890 </p>
+        email:<a href="mailto:info@mysite.com">info@mysite.com</a> <br>
+        phone: <a href="123-456-7890">123-456-7890</a> </p>
     </body>
